# pyproject-template

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  LICENSE  Makefile  README.rst  pyproject.toml  requirements-dev.txt  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  lint.yml  wheels.yml
docs/: conf.py  index.rst
