[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"


[project]
name = "packagename"
authors = [
    {name = "Antonio Valentino", email = "antonio.valentino@tiscali.it"},
]
description = "long description"
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.9"
keywords = ["kw1", "kw2"]
license = "MIT"
license-files = ["LICEN[CS]E*", "AUTHORS.rst"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
dependencies = [
    'typing-extensions; python_version < "3.9"',
]
dynamic = ["version"]


[project.optional-dependencies]
fearure = ["pytest", "bitarray>=1.5.1", "bitstruct", "numpy"]
full = ["packagename[test]"]


[project.scripts]
toolname = "packagename.module:function"


[project.urls]
Homepage = "https://github.com/avalentino/packagename"
Documentation = "https://packagename.readthedocs.io"
Repository = "https://github.com/avalentino/packagename.git"
Changelog = "https://github.com/avalentino/packagename/blob/main/docs/release_notes.rst"
Issues = "https://github.com/avalentino/packagename/issues"


[tool.setuptools]
packages = ["packagename", "packagename.tests"]
# py-modules = ["modulename"]
# zip-safe = true
# license-files = ["LICENSE"]


# [tool.setuptools.packages]
# find = {namespaces = false}


[tool.setuptools.dynamic]
version = {attr = "packagename.__version__"}


[tool.setuptools.package-data]
"*" = ["*.txt"]
mypkg1 = ["data1.rst"]


[tool.cibuildwheel]
skip = "pp*"
test-requires = "pytest"
test-command = "pytest -v {project}/tests"


[tool.pytest.ini_options]
addopts = "--ignore=examples/"
addopts = [
    "--import-mode=importlib",
]


[tool.black]
line-length = 79
preview = true
enable-unstable-feature = [
    "hug_parens_with_braces_and_square_brackets",
    "multiline_string_handling",
    "string_processing",
    "wrap_long_dict_values_in_parens",
]
# target-version = ['py311']
# extend-exclude = "packagename/parse/*"


[tool.isort]
profile = "black"
length_sort = true
multi_line_output = 3
no_inline_sort = true
include_trailing_comma = true
use_parentheses = true
line_length = 79
# force_grid_wrap = 0
# ensure_newline_before_comments = true
known_first_party = ["my_module1", "my_module2"]
# skip_glob = ["packagename/parse/*"]


[tool.pydocstyle]
add-ignore = ["D105"]
# add-ignore = ["D105", "D107"]
match='(?!(test_|conf)).*\.py'


[tool.codespell]
skip = "*.pdf,*.pp,*.ipynb,./docs/spelling_wordlist.txt"
count = true
quiet-level = 3
ignore-words-list = "nd"


[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]


[tool.ruff]
line-length = 79
# indent-width = 4
# target-version = "py39"
extend-exclude = ["docs/conf.py"]


[tool.ruff.lint]
preview = true
select = [
    # ruff --version  # ruff 0.11.6
    "E",        #  E/W pycodestyle
    "W",        #  E/W pycodestyle
    "F",        #    F Pyflakes
    "D",        #    D pydocstyle
    "N",        #    N pep8-naming
    # "I",      #    I isort
    "C90",      #  C90 mccabe
    "UP",       #   UP pyupgrade
    # --- flake8 ---
    "YTT",      #  YTT flake8-2020
    # "ANN",    #  ANN flake8-annotations
    # "ASYNC",  #ASYNC flake8-async
    # "S",      #    S flake8-bandit
    "BLE",      #  BLE flake8-blind-except
    # "FBT",    #  FBT flake8-boolean-trap
    "B",        #    B flake8-bugbear
    "A",        #    A flake8-builtins
    # "COM",    #  COM flake8-commas
    "C4",       #   C4 flake8-comprehensions
    # "CPY",    #  CPY flake8-copyright
    "DTZ",      #  DTZ flake8-datetimez
    # "T10",    #  T10 flake8-debugger
    # "DJ",     #   DJ flake8-django
    # "EM",     #   EM flake8-errmsg
    "EXE",      #  EXE flake8-executable
    "FIX",      #  FIX flake8-fixme
    # "FA",     #   FA flake8-future-annotations
    # "INT",    #  INT flake8-gettext
    "ISC",      #  ISC flake8-implicit-str-concat
    "ICN",      #  ICN flake8-import-conventions
    # "LOG",    #  LOG flake8-logging
    "G",        #    G flake8-logging-format
    "INP",      #  INP flake8-no-pep420
    "PIE",      #  PIE flake8-pie
    "T20",      #  T20 flake8-print
    # "PYI",    #  PYI flake8-pyi
    # "PT",     #   PT flake8-pytest-style
    "Q",        #    Q flake8-quotes
    "RSE",      #  RSE flake8-raise
    "RET",      #  RET flake8-return
    # "SLF",    #  SLF flake8-self
    # "SIM",    #  SIM flake8-simplify
    #"SLOT",    # SLOT flake8-slots
    # "TID",    #  TID flake8-tidy-imports
    # "TD",     #   TD flake8-todos
    # "TC",     #   TC flake8-type-checking
    # "ARG",    #  ARG flake8-unused-arguments
    # "PTH",    #  PTH flake8-use-pathlib
    # --- misc ---
    # "AIR",    #  AIR Airflow
    # "ERA",    #  ERA eradicate
    # "FAST",   # FAST FastAPI
    # "FLY",    #  FLY flynt
    "NPY",      #  NPY NumPy-specific rules
    # "PD",     #   PD pandas-vet
    # "PERF",   # PERF Perflint
    # "DOC",    #  DOC pydoclint
    # "PGH",    #  PGH pygrep-hooks
    # "PL",     #   PL Pylint
    # "FURB",   # FURB refurb
    # "RUF",    #  RUF Ruff-specific rules
    # "TRY",    #  TRY tryceratops
]
extend-ignore = [
    "D105",     # D105 Missing docstring in magic method
    # "D107",     # D107 Missing docstring in `__init__`
    "D203",     # D203 1 blank line required before class docstring
    "D213",     # D213 Multi-line docstring summary should start at the second line
    "ISC001",   # ISC001 Implicitly concatenated string literals on one line
    "PLR2004",  # PLR2004 Magic value used in comparison, consider replacing 2 with a constant variable
    # "PLR0913",  # PLR0913 Too many arguments in function definition
    # "PLW1514",  # PLW1514 `open` in text mode without explicit `encoding` argument
    "RET504",   # RET504 Unnecessary assignment before `return` statement
    "RET505",   # RET505 Unnecessary `elif` after `return` statement
]


[tool.ruff.format]
preview = true
docstring-code-format = true


[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["D"]
"**/{notebooks}/*.ipynb" = ["D","T201"]
"docs/conf.py" = ["D"]


[tool.ruff.lint.isort]
length-sort = true


[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"xml.etree.ElementTree" = "etree"
